# Genunity

./: .editorconfig  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  launch.py  pyproject.toml  railway.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_users_tokens_simulation_runs.py  e1f2a3b4c5d6_add_platform_tables.py
docker/: Dockerfile  Dockerfile.gpu
docs/: api-reference.md  architecture.md  processes.md  quickstart.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: Sidebar.tsx
frontend/src/components/Auth/: ProtectedRoute.tsx  UserButton.tsx
frontend/src/components/Dashboard/: FluxSankey.tsx  GeneExpressionHeatmap.tsx  MetaboliteChart.tsx
frontend/src/hooks/: useClerk.ts  useSimulation.ts  useStreamingData.ts
frontend/src/pages/: CellForgePage.tsx  GenomeSelectorPage.tsx
frontend/src/stores/: authStore.ts  simulationStore.ts
frontend/src/types/: simulation.ts
scripts/: benchmark.py  download_bakta_db.sh  download_reference_data.sh
src/biolab/: __init__.py  config.py  registry.py
src/biolab/api/: app.py  deps.py  platform_deps.py
src/biolab/cellforge/: __init__.py  adapter.py
src/biolab/cli/: analyze.py  db.py  evidence.py  export.py  genes.py  main.py  pipeline_cmd.py  synthesize.py  validate.py
src/biolab/db/: __init__.py  async_engine.py  engine.py
src/biolab/ingestion/: growth_curves.py  transposon.py
src/biolab/pipeline/: evidence_runner.py  orchestrator.py  persistence.py
src/biolab/pipelines/: definitions.py  resources.py  schedules.py  sensors.py
src/biolab/services/: convergence.py  ensembl.py  evidence_normalizer.py  evidence_service.py  export_service.py  genbank.py  gene_service.py  hypothesis_service.py  import_service.py  llm_service.py  llm_synthesis.py  ncbi.py  ncbi_genomes.py  stripe_service.py  token_service.py  transposon_service.py  uniprot.py  usage_service.py  validation_service.py
src/biolab/simulation/: __init__.py  engine.py  epigenetics.py  gene_expression.py  growth.py  metabolism.py  mutation.py  population.py  state.py  stoichiometric_matrix.py
src/cellforge/: __init__.py
src/cellforge/ai/: gap_filling.py
src/cellforge/annotation/: pipeline.py  reconciler.py
src/cellforge/api/: app.py  deps.py  schemas.py  websocket.py
src/cellforge/cli/: main.py
src/cellforge/constraints/: thermodynamics.py
src/cellforge/core/: __init__.py  simulation.py
src/cellforge/db/: engine.py  models.py  session.py
src/cellforge/processes/: __init__.py  degradation.py  division.py  maintenance.py  metabolism.py  regulation.py  replication.py  transcription.py  translation.py  transport.py
src/cellforge/services/: token_service.py
tests/: conftest.py
tests/test_api/: test_evidence_api.py  test_genes_api.py  test_hypotheses_api.py
tests/test_cellforge/: conftest.py
tests/test_cellforge/unit/: test_config.py  test_engine_import.py  test_knowledge_base.py
tests/test_cli/: test_analyze_cli.py  test_genes_cli.py
tests/test_ingestion/: test_genbank.py  test_growth_curves.py  test_transposon.py
tests/test_models/: test_evidence.py  test_gene.py  test_hypothesis.py
tests/test_services/: test_convergence.py  test_evidence_normalizer.py  test_gene_service.py  test_gene_service_freshness.py  test_go_validator.py  test_graduation.py  test_hypothesis_service.py  test_import.py  test_llm_service.py  test_transposon_service.py  test_validation.py
tests/unit/: test_config.py  test_engine_import.py  test_knowledge_base.py
(+107 files in other folders)
