[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[project]
name = "cellforge"
version = "0.1.0"
description = "Genome-agnostic whole-cell simulation engine"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "numpy",
    "scipy",
    "cobra",
    "biopython",
    "gillespy2",
    "fastapi",
    "uvicorn",
    "websockets",
    "redis",
    "pydantic>=2.0",
    "rich",
    "typer",
    "httpx",
    "pyarrow",
    "zarr",
    "h5py",
    "torch",
    "transformers",
    "equilibrator-api",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "stripe",
    "python-jose[cryptography]",
]

[project.optional-dependencies]
jax = ["jax", "jaxlib"]
gpu = ["torch"]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "maturin>=1.7",
]

[project.scripts]
cellforge = "cellforge.cli.main:app"

[tool.maturin]
python-source = "src"
module-name = "cellforge._engine"
manifest-path = "crates/cellforge-engine/Cargo.toml"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
